tests/functional/lang/eval-fail-derivation-name.err.exp
error:
       … while evaluating the attribute 'outPath'
         at <nix/derivation-internal.nix>:44:9:
           43|       value = commonAttrs // {
           44|         outPath = builtins.getAttr outputName strict;
             |         ^
           45|         drvPath = strict.drvPath;

       … while calling the 'getAttr' builtin
         at <nix/derivation-internal.nix>:44:19:
           43|       value = commonAttrs // {
           44|         outPath = builtins.getAttr outputName strict;
             |                   ^
           45|         drvPath = strict.drvPath;

       … while calling the 'derivationStrict' builtin
         at <nix/derivation-internal.nix>:34:12:
           33|
           34|   strict = derivationStrict drvAttrs;
             |            ^
           35|

       … while evaluating derivation '~jiggle~'
         whose name attribute is located at /pwd/lang/eval-fail-derivation-name.nix:2:3

       error: invalid derivation name: name '~jiggle~' contains illegal character '~'. Please pass a different 'name'.
